--- a/style.css
+++ b/style.css
@@ -62,12 +62,12 @@
            }
        }
 
-       /* Image Carousel Styles */
+       /* Your provided CSS goes here, or link to external file */
        .carousel-container {
            position: relative;
            overflow: hidden;
            border-radius: 24px;
-           /* height: 400px;  <--- REMOVE THIS LINE or comment it out */
+           /* height: 400px; <--- This was commented out in original CSS, good! */
        }
 
        .carousel-slide {
@@ -76,7 +76,6 @@
            left: 0;
            width: 100%;
            height: 100%;
-           /* Keep this, as it refers to the parent .carousel-container */
            opacity: 0;
            transition: opacity 1s ease-in-out;
            background-size: cover;
@@ -102,7 +101,6 @@
            position: relative;
            z-index: 10;
            height: 100%;
-           /* Keep this, ensuring content fills the slide */
            display: flex;
            align-items: center;
        }
